2010-11-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10912: Rename and move task to classes/tasks and change locallang namespace
	* Fixed bug #10900: Regression: Fatal error in class.tx_linkvalidator_modfunc1.php
	* Tagging version 1.0.0
	* Fixed bug #10892: Basic cleanup throughout the extension
	* Fixed bug #10891: Fix deprecation warning "call by reference" in modfunc1
	* Fixed bug #10820: Error and warning in scheduler task
	* Fixed bug #10890: Add ext:info as dependency in ext_emconf

2010-11-12  Tolleiv Nietsch  <info@tolleiv.de>

	* Fixed bug #10763: The mailtemplate setting should have a default setting
	* Fixed bug #10598: "Check links" button must be hideable with TS - renamed noUpdateButton to showUpdateButton, manual updated

2010-11-11  Michael Miousse  <michael.miousse@infoglobe.ca>

	* Fixed bug #10740: news field added in the table tx_linkvalidator_links, 2 new index in locallang.xml for the header of the new column and the format of the string in the column, news column added in tx_linkvalidator_modfunc1 and time() saved in the new field added to the table tx_linkvalidator_links
	* Fixed bug #10737:  news mod tsconfig added to remove the check link button. mod.linkvalidator.noUpdateButton = 0
	* Fixed bug #10739 : Button added in tx_linkvalidator_modfunc1, news index in the locallang file, new marquer in the template mod_template.html and new css
	* Fixed bug #10736: automatic refresh on changing selection of depth level has been removed
	* Fixed bug #10643: modification of the line 166, add of is_array check before doing a array_search

2010-11-03  Tolleiv Nietsch  <info@tolleiv.de>

	* Fixed bug #10598: - extend tx_linkvalidator_checkbase API a bit

2010-07-19 Jochen Rieger / Dimitri Knig / Michael Miousse  <j.rieger@connecta.ag, mmiousse@infoglobe.ca>

	* initial code generated with kickstarter